Add cinemaHall and seat controllers tests. All tests pass